@@ -154,6 +154,9 @@ Changes on 1.2.0 since 1.1.0:
 * Added new menu option 'Edit'->'Properties' from the selection context
     menu for those who cannot use the context menu.
 
+* Added new menu option 'File'->'Open Selected Files' to launch selection
+    for those who cannot use neither keyboard nor selection context menu.
+
 
 Changes on 1.1.0 since 1.0.1:
 
